# fzsd2026

src/: readme.md
src/rm_auto_aim/armor_detector/: CMakeLists.txt  package.xml
src/rm_auto_aim/armor_detector/include/armor_detector/: detector_node.hpp  yolo_detector.hpp
src/rm_auto_aim/armor_detector/src/: detector_node.cpp  yolo_detector.cpp
src/rm_auto_aim/armor_tracker/src/: tracker.cpp  tracker_node.cpp
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/rm_vision/rm_vision_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
src/rm_vision/rm_vision_bringup/launch/: autoaim.launch.py
src/ros2-hik-camera/config/: camera_info.yaml  camera_params.yaml
src/ros2-hik-camera/src/: hik_camera_node.cpp
src/vision_attacker/: CMakeLists.txt
src/vision_attacker/include/vision_attacker/: planner.hpp  target.hpp  trajectory.hpp  vision_attacker_node.hpp
src/vision_attacker/src/: math_tools.cpp  planner.cpp  target.cpp  trajectory.cpp  vision_attacker_node.cpp
src/vision_attacker/src/tinympc/: CMakeLists.txt  admm.cpp
src/vision_attacker/test/: test_planner.cpp
src/vision_interfaces/: CMakeLists.txt  README.md  package.xml
src/vision_interfaces/msg/: AutoAim.msg  Robot.msg
src/vision_serial_driver/: CMakeLists.txt  README.md  package.xml
src/vision_serial_driver/include/vision_serial_driver/: avgFilter.hpp  packet.h  vision_serial_driver_node.hpp
src/vision_serial_driver/src/: vision_serial_driver_node.cpp
